--- a/Taskly.xcodeproj/xcshareddata/xcschemes/Taskly.xcscheme
+++ b/Taskly.xcodeproj/xcshareddata/xcschemes/Taskly.xcscheme
@@ -26,8 +26,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "1876089426147508006F67CD"
+            BuildableName = "Taskly.app"
+            BlueprintName = "Taskly"
+            ReferencedContainer = "container:Taskly.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "18A8587E261D009500C16F22"
+               BuildableName = "TasklyTests.xctest"
+               BlueprintName = "TasklyTests"
+               ReferencedContainer = "container:Taskly.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
