Part one of IAP, done. Proceed with part two

--- a/Taskly.xcodeproj/xcshareddata/xcschemes/Taskly.xcscheme
+++ b/Taskly.xcodeproj/xcshareddata/xcschemes/Taskly.xcscheme
@@ -82,6 +82,9 @@
             ReferencedContainer = "container:Taskly.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../Taskly/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
