--- a/Taskly/Taskly.entitlements
+++ b/Taskly/Taskly.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.me.cilia.filippo.Taskly</string>
+		<string>iCloud.me.cilia.filippo.Tasklio</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
